# yaul

./: .clang-tidy  CMakeLists.txt  readme.md
.githooks/: pre-commit
.github/workflows/: linux.yml
common/: CMakeLists.txt  logger.hpp  logger_test.cpp  logging.cpp  logging.hpp  logging_test.cpp  main_test.cpp  string.hpp  string_test.cpp
docs/: css-features.md  design.md  xml-features.md
examples/: CMakeLists.txt
examples/3d-and-vg/: CMakeLists.txt  logging.cpp  logging.h  main.cpp
examples/clock/: CMakeLists.txt  main.cpp
examples/hello-world/: CMakeLists.txt  main.cpp
include/yaul/: api.hpp  application.hpp  common.hpp  dimensions.hpp  log.h  log.hpp  monitor.hpp  object.hpp  pointers.hpp  string.hpp  window.hpp  yaul.h  yaul.hpp
installer-win/: CMakeLists.txt  main.cpp  resources.h
libraries/: CMakeLists.txt  FindTinyUTF8.cmake  FindTinyXML2.cmake  FindXCB.cmake
project-entrypoint/: CMakeLists.txt  entrypoint.cpp
project-yaul/: CMakeLists.txt  application.cpp  application_impl.hpp  application_test.cpp  application_unix.cpp  application_win32.cpp  common.cpp  common_test.cpp  dimensions_test.cpp  exception.hpp  log.cpp  logger.hpp  monitor.cpp  monitor_impl.hpp  monitor_test.cpp  monitor_unix.cpp  monitor_win32.cpp  object.cpp  object_impl.hpp  object_test.cpp  string.hpp  window.cpp  window_impl.hpp  window_test.cpp  window_unix.cpp  window_win32.cpp  xcb.hpp  xcb_unix.cpp  yaul.cpp
project-yaul-mocked/: CMakeLists.txt  monitor_mocked.hpp  monitor_win32.cpp  window.cpp  window_mocked.hpp  window_win32.cpp
project-yaul/impl/: CMakeLists.txt  application.cpp  application.hpp  window.cpp  window.hpp  window_win32.cpp
tools/: Clang-TidyFormat.py  CreateVersionFromGitTag.py  Template.py
